# MySocket_Cpp

./: .gitignore  CMakeLists.txt  ClientMain.cpp  ClientSocket.cpp  ClientSocket.h  README.md  ServerMain.cpp  ServerSocket.cpp  ServerSocket.h
include/: ClientSocket.h  ISocket.h  ServerSocket.h  Socket.h  SocketException.h  SocketVal.h
src/: ClientSocket.cpp  ServerSocket.cpp  Socket.cpp  SocketException.cpp
